# oasis-messaging

./: README.md  package.json  truffle-config.js
contracts/message-board/: Cargo.toml
contracts/message-board/src/: helpers.rs  lib.rs
test/: test-dashboard.js  test-message-board.js
