[package]
name = "message-board"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com"]
edition = "2018"

[dependencies]
hex = "0.3"
oasis-std = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9.0"
serde_derive = "1.0.74"
serde_json = "1.0.26"
tiny-keccak = "1.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
incremental = false

[package.metadata.oasis]
max-mem = 4194304

